# BlockchainEngineering

./: .gitignore  00_Overview.ipynb  01_Intro.ipynb  01_Intro_To_Distribtued_Systems.ipynb  01_Intro_To_Distributed_Systems.ipynb  02_Gossip_Services.ipynb  02_Services.ipynb  03_Faults.ipynb  04_Byzantine.ipynb  05_Consensus.ipynb  06_Trustchain.ipynb  Intro.ipynb  README.md  pyproject.toml  requirements.txt
binder/: environment.yml
input/: config.yml
p2p-network-simulator/: animate.py  messages.py  peer.py  peermanager.py  run.py
p2psim/: animate.py  consts.py  disruptions.py  messages.py  network.py  peer.py  peermanager.py  run.py
p2psimpy/: __init__.py  config.py  consts.py  defaults.py  logger.py  messages.py  network.py  peer.py  peer_factory.py  simulation.py  storage.py  utils.py  visual.py  visual_simulation.py
p2psimpy/input/: config.yml  locations.yml  logger.yml
p2psimpy/services/: __init__.py  base.py  connection_manager.py  disruption.py  gossip.py  message_producer.py  selection.py
p2psimpy/services/consensus/: lottery.py
p2psimpy/storage/: __init__.py  dag.py  simple.py
p2psimpy/tests/: configspec.ini  test.ini  test.yaml  test_config.py  test_connection.py  test_simulation.py
