[tool.poetry]
name = "blockchain-engineering"
version = "1.0.0"
description = "A collection of notebooks that helps to design and simulate own blockchain-like system from scratch."
authors = ["grimadas <bulat.nasrulin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/grimadas/BlockchainEngineering"
repository = "https://github.com/grimadas/BlockchainEngineering"
keywords = ["simulation","blockchain","notebook","distributed-systems"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
p2psimpy = "^0.1.0"
pandas = "^1.3.5"
jupyter = "^1.0.0"
ipykernel = "^6.6.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
